2006-06-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* remove elements from the ToOcamlData stack

	ELSA
	* ocaml serialization for CType's
	* hand translation for the CType hierarchy

	* CompoundType::bases (which was of type const ObjList<BaseClass>)
	  changed into non-const & protected
	* use const ObjList<BaseClass> & get_bases() to access the bases
	  list

	* moved function calls out of caml_callback
	* fixed init bug in Scope::Scope (from Scott)
	


2006-05-15  Hendrik Tews  <tews@localhost.localdomain>

	ELSA
	* added non-closure assertions to hand written serialization funcs

	SEMANTIC
	* adopted ml code to the changed ast

	AST
	* merged AnnotationField into CtorArg, renamed the latter into
	FieldOrCtorArg
	* added "field" marked fields to the ocaml ast
	* added check in generated code that tests for the right number of
	arguments for ocaml callbacks
	* enabled nullable flag for fields

	ELSA
	* added nullable to all fields that might be NULL

	ALL
	* added virtual destructors and other stuff to silence warning

2006-05-15  Hendrik Tews  <tews@debian>

	AST
	* new class AnnotationField in the ast.ast
	* new field ASTClass.fields
	* fields marked with the "field" modifier are cached in
	ASTClass.fields, because we'll access them frequently in the ocaml
	related code
	* ASTClass.fields is initialized via the init_fields method, which
	is called from within the parser (could also be done after
	merging, but well ...), mergeClass merges the fields

2006-05-12  Hendrik Tews  <tews@debian>

	ELSA
	* hashed sourcelocs finished

2006-05-12  Hendrik Tews  <tews@localhost.localdomain>

	AST:
	* made ToOcamlData a forward decl in ocamlhelp.h; clients have to
	define it

	ELSA:
	* towards hashed sourceloc's; need to resolve caml init

2006-05-11  Hendrik Tews  <tews@localhost.localdomain>

	* finished astmap template
	* finished hashloc utility

2006-05-10  Hendrik Tews  <tews@localhost.localdomain>

	* started astmap

	* added ast iter template